--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 
 
 /* ==========================================================================
-   Author's custom styles
+   GreenSharks's custom styles
    ========================================================================== */
 
 
